<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="beauty_mh_001">贴纸</string>
    <string name="beauty_mh_002">美颜</string>
    <string name="beauty_mh_003">特效</string>
    <string name="beauty_mh_004">哈哈镜</string>
    <string name="beauty_mh_005">基础贴纸</string>
    <string name="beauty_mh_006">高级贴纸</string>
    <string name="beauty_mh_007">基础面具</string>
    <string name="beauty_mh_008">高级面具</string>
    <string name="beauty_mh_009">贴纸下载失败</string>
    <string name="beauty_mh_010">美颜</string>
    <string name="beauty_mh_011">美型</string>
    <string name="beauty_mh_012">一键美颜</string>
    <string name="beauty_mh_013">滤镜</string>
    <string name="beauty_mh_014">水印</string>
    <string name="beauty_mh_015">动作</string>
    <string name="beauty_mh_016">美妆</string>
    <string name="beauty_mh_no">原图</string>
    <string name="beauty_mh_meibai">美白</string>
    <string name="beauty_mh_mopi">磨皮</string>
    <string name="beauty_mh_hongrun">红润</string>
    <string name="beauty_mh_liangdu">亮度</string>
    <string name="beauty_mh_dayan">大眼</string>
    <string name="beauty_mh_meimao">眉毛</string>
    <string name="beauty_mh_yanju">眼距</string>
    <string name="beauty_mh_yanjiao">眼角</string>
    <string name="beauty_mh_shoulian">瘦脸</string>
    <string name="beauty_mh_zuixing">嘴型</string>
    <string name="beauty_mh_shoubi">瘦鼻</string>
    <string name="beauty_mh_xiaba">下巴</string>
    <string name="beauty_mh_etou">额头</string>
    <string name="beauty_mh_changbi">长鼻</string>
    <string name="beauty_mh_xuelian">削脸</string>
    <string name="beauty_mh_kaiyanjiao">开眼角</string>
    <string name="beauty_mh_biaozhun">标准</string>
    <string name="beauty_mh_youya">优雅</string>
    <string name="beauty_mh_jingzhi">精致</string>
    <string name="beauty_mh_keai">可爱</string>
    <string name="beauty_mh_ziran">自然</string>
    <string name="beauty_mh_wanghong">网红</string>
    <string name="beauty_mh_tuosu">脱俗</string>
    <string name="beauty_mh_gaoya">高雅</string>
    <string name="beauty_mh_filter_no">无</string>
    <string name="beauty_mh_filter_langman">浪漫</string>
    <string name="beauty_mh_filter_qingxin">清新</string>
    <string name="beauty_mh_filter_weimei">唯美</string>
    <string name="beauty_mh_filter_fennen">粉嫩</string>
    <string name="beauty_mh_filter_huaijiu">怀旧</string>
    <string name="beauty_mh_filter_qingliang">清凉</string>
    <string name="beauty_mh_filter_landiao">蓝调</string>
    <string name="beauty_mh_filter_rixi">日系</string>
    <string name="beauty_mh_filter_chengshi">城市</string>
    <string name="beauty_mh_filter_chulian">初恋</string>
    <string name="beauty_mh_filter_chuxin">初心</string>
    <string name="beauty_mh_filter_danse">单色</string>
    <string name="beauty_mh_filter_fanchase">反差色</string>
    <string name="beauty_mh_filter_hupo">琥珀</string>
    <string name="beauty_mh_filter_meiwei">美味</string>
    <string name="beauty_mh_filter_mitaofen">蜜桃粉</string>
    <string name="beauty_mh_filter_naicha">奶茶</string>
    <string name="beauty_mh_filter_pailide">拍立得</string>
    <string name="beauty_mh_filter_wutuobang">乌托邦</string>
    <string name="beauty_mh_filter_xiyou">西柚</string>
    <string name="beauty_mh_filter_riza">日杂</string>
    <string name="beauty_mh_pro_filter_heimao">黑猫</string>
    <string name="beauty_mh_pro_filter_heibai">黑白</string>
    <string name="beauty_mh_pro_filter_bulukelin">布鲁克林</string>
    <string name="beauty_mh_pro_filter_pingjing">平静</string>
    <string name="beauty_mh_pro_filter_lengku">冷酷</string>
    <string name="beauty_mh_pro_filter_kaiwen">凯文</string>
    <string name="beauty_mh_pro_filter_lianai">恋爱</string>
    <string name="beauty_mh_pro_filter_jianbao">简报</string>

    <string name="beauty_mh_texiao_linghun">灵魂出窍</string>
    <string name="beauty_mh_texiao_doudong">抖动</string>
    <string name="beauty_mh_texiao_shanbai">闪白</string>
    <string name="beauty_mh_texiao_maoci">毛刺</string>
    <string name="beauty_mh_texiao_huanjue">幻觉</string>
    <string name="beauty_mh_texiao_msk">马赛克1</string>
    <string name="beauty_mh_texiao_msk_yuan">马赛克2</string>
    <string name="beauty_mh_texiao_msk_san">马赛克3</string>
    <string name="beauty_mh_texiao_msk_liu">马赛克4</string>
    <string name="beauty_mh_texiao_action_head">抬头</string>
    <string name="beauty_mh_texiao_action_mouth">张嘴</string>
    <string name="beauty_mh_texiao_action_eye">眨眼</string>
    <string name="beauty_mh_haha_waixingren">外星人</string>
    <string name="beauty_mh_haha_li">梨梨脸</string>
    <string name="beauty_mh_haha_shou">瘦瘦脸</string>
    <string name="beauty_mh_haha_jingxiang">镜像脸</string>
    <string name="beauty_mh_haha_pianduan">片段脸</string>
    <string name="beauty_mh_haha_daoying">水面倒影</string>
    <string name="beauty_mh_haha_xuanzhuan">螺旋镜面</string>
    <string name="beauty_mh_haha_yuyan">鱼眼相机</string>
    <string name="beauty_mh_haha_zuoyou">左右镜面</string>

    <string name="beauty_mh_makeup_none">原图</string>
    <string name="beauty_mh_makeup_jiemao">睫毛</string>
    <string name="beauty_mh_makeup_chuncai">唇彩</string>
    <string name="beauty_mh_makeup_saihong">腮红</string>
    <string name="beauty_mh_makeup_yanying">眼影</string>
    <string name="beauty_mh_makeup_yanxian">眼线</string>



    <string name="beauty_none"></string>

    <string name="beauty_mh_texiao_action_head_tip">请抬头</string>
    <string name="beauty_mh_texiao_action_mouth_tip">请张嘴</string>
    <string name="beauty_mh_texiao_action_eye_tip">请眨眼</string>

    <string name="beauty_mh_texiao_action_downloading">贴纸下载中,请稍后</string>


</resources>
