<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/btn_hide"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80000000"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/group_beauty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:text="@string/beauty_mh_meibai"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:text="@string/beauty_mh_mopi"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:text="@string/beauty_mh_hongrun"
                        android:textColor="@color/white"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <SeekBar
                        android:id="@+id/seek_bar_meibai"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:max="9" />

                    <SeekBar
                        android:id="@+id/seek_bar_mopi"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:max="9" />

                    <SeekBar
                        android:id="@+id/seek_bar_hongrun"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:max="9" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_meibai"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:minWidth="30dp"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/text_mopi"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:minWidth="30dp"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/text_hongrun"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:minWidth="30dp"
                        android:textColor="@color/white"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/group_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/filter_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </FrameLayout>


        </FrameLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#80333333"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btn_beauty"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/beauty_mh_002"
                android:textColor="@color/fg_btn_beauty_simple"
                android:textSize="14sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray1" />

            <RadioButton
                android:id="@+id/btn_filter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/beauty_mh_013"
                android:textColor="@color/fg_btn_beauty_simple"
                android:textSize="14sp" />

        </RadioGroup>

    </LinearLayout>


</LinearLayout>
