<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/btn_hide"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@mipmap/ic_mh_bottom_bg"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/btn_tie_zhi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/ic_mh_tiezhi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/beauty_mh_001"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </FrameLayout>



        <FrameLayout
            android:id="@+id/btn_mei_yan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/ic_mh_meiyan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/beauty_mh_002"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_center_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_record"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/ic_video_record">
            </ImageView>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/btn_makeup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/ic_mh_makeup" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/beauty_mh_016"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/btn_te_xiao"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/ic_mh_texiao" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/beauty_mh_003"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/btn_haha"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/ic_mh_haha" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/beauty_mh_004"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>
</LinearLayout>
